multi boards removing some game.getBoaord()